--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.EduSyncApp"
         tools:targetApi="31">
         <activity
+            android:name=".pages.Assignment_Page"
+            android:exported="false" />
+        <activity
             android:name=".pages.Main_Screen"
             android:exported="false" />
         <activity
