--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.EduSyncApp"
         tools:targetApi="31">
         <activity
+            android:name=".pages.Materials_Page"
+            android:exported="false" />
+        <activity
+            android:name=".pages.NoteDetails_Page"
+            android:exported="false" />
+        <activity
             android:name=".pages.AddNote_Page"
             android:exported="false" />
         <activity
