--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.EduSyncApp"
         tools:targetApi="31">
         <activity
+            android:name=".pages.EventDetails_Page"
+            android:exported="false" />
+        <activity
+            android:name=".pages.EditProfile_Page"
+            android:exported="false" />
+        <activity
             android:name=".pages.NoteSingleImage"
             android:exported="false" />
         <activity
